--- a/ComBatHarmonization/Resources/UI/ComBatHarmonization.ui
+++ b/ComBatHarmonization/Resources/UI/ComBatHarmonization.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ComBatHarmonization</class>
- <widget class="qMRMLWidget" name="ComBatHarmonization">
+ <class>S</class>
+ <widget class="qMRMLWidget" name="S">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>546</width>
-    <height>588</height>
+    <width>665</width>
+    <height>802</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -26,9 +26,23 @@
       </item>
       <item row="0" column="1">
        <widget class="QComboBox" name="comBatSelector">
+        <property name="currentText">
+         <string>Cortical thickness measurements</string>
+        </property>
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <property name="placeholderText">
+         <string>Choose Task</string>
+        </property>
         <item>
          <property name="text">
           <string>Cortical thickness measurements</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Structural MRI data (not recommended)</string>
          </property>
         </item>
         <item>
@@ -54,33 +68,35 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QPushButton" name="addFileButton">
-        <property name="text">
-         <string>Add File</string>
+       <widget class="ctkPathLineEdit" name="addDataFramePathLineEdit">
+        <property name="nameFilters">
+         <stringlist>
+          <string>*.csv</string>
+         </stringlist>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="4" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_8"/>
       </item>
-      <item row="4" column="0">
+      <item row="8" column="0">
        <widget class="QLabel" name="label_7">
         <property name="text">
          <string>Create New DataFrame :</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="8" column="1">
        <widget class="QCheckBox" name="createNewDataFrameButton">
         <property name="text">
          <string/>
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <layout class="QHBoxLayout" name="horizontalLayout_9"/>
+      <item row="9" column="0">
+       <layout class="QHBoxLayout" name="horizontalLayout_5"/>
       </item>
-      <item row="7" column="0">
+      <item row="11" column="0">
        <widget class="QLineEdit" name="covariatesNames">
         <property name="enabled">
          <bool>false</bool>
@@ -96,18 +112,60 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="1">
-       <widget class="QPushButton" name="pushButton">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>Add Covariate</string>
-        </property>
-       </widget>
+      <item row="11" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QPushButton" name="addCovariateButton">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>125</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>80</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Add Covariate</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="removeCovariateButton">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>125</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Remove Covariate</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="saveCovariatesButton">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Save Covariates</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
-      <item row="8" column="0">
-       <widget class="QLineEdit" name="lineEdit">
+      <item row="12" column="0">
+       <widget class="QLineEdit" name="covariatesValues">
         <property name="enabled">
          <bool>false</bool>
         </property>
@@ -116,12 +174,18 @@
         </property>
        </widget>
       </item>
-      <item row="8" column="1">
+      <item row="12" column="1">
        <widget class="QTextEdit" name="textEdit">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>100</height>
+          <height>60</height>
          </size>
         </property>
         <property name="readOnly">
@@ -129,91 +193,58 @@
         </property>
        </widget>
       </item>
-      <item row="9" column="0">
+      <item row="16" column="0">
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="16" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <item>
+         <widget class="QLabel" name="addFileGroupLabel">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Add Files :</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="covariatesSelector">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="addFileGroupButton">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Add Files</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="removeFileGroupButton">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Remove Files</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="23" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_7"/>
       </item>
-      <item row="12" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>Features File :</string>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="1">
-       <widget class="qMRMLNodeComboBox" name="dataFrameSelector1">
-        <property name="nodeTypes">
-         <stringlist notr="true">
-          <string>vtkMRMLTableNode</string>
-         </stringlist>
-        </property>
-        <property name="showChildNodeTypes">
-         <bool>false</bool>
-        </property>
-        <property name="hideChildNodeTypes">
-         <stringlist notr="true"/>
-        </property>
-        <property name="noneEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="addEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="removeEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="interactionNodeSingletonTag">
-         <string notr="true"/>
-        </property>
-       </widget>
-      </item>
-      <item row="13" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Covariates File :</string>
-        </property>
-       </widget>
-      </item>
-      <item row="13" column="1">
-       <widget class="qMRMLNodeComboBox" name="dataFrameSelector2">
-        <property name="nodeTypes">
-         <stringlist notr="true">
-          <string>vtkMRMLTableNode</string>
-         </stringlist>
-        </property>
-        <property name="showChildNodeTypes">
-         <bool>false</bool>
-        </property>
-        <property name="hideChildNodeTypes">
-         <stringlist notr="true"/>
-        </property>
-        <property name="noneEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="addEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="removeEnabled">
-         <bool>false</bool>
-        </property>
-        <property name="interactionNodeSingletonTag">
-         <string notr="true"/>
-        </property>
-       </widget>
-      </item>
-      <item row="14" column="0">
-       <layout class="QHBoxLayout" name="horizontalLayout_3"/>
-      </item>
-      <item row="10" column="0">
-       <widget class="QPushButton" name="addFileGroupButton">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>Add Files</string>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="1">
+      <item row="24" column="1">
        <widget class="QPushButton" name="saveDataFrameButton">
         <property name="enabled">
          <bool>false</bool>
@@ -223,20 +254,131 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="Line" name="line">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="11" column="0">
+      <item row="25" column="0">
        <widget class="Line" name="line_2">
         <property name="frameShadow">
          <enum>QFrame::Sunken</enum>
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="26" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Features File :</string>
+        </property>
+       </widget>
+      </item>
+      <item row="26" column="1">
+       <widget class="qMRMLNodeComboBox" name="dataFrameSelector1">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="nodeTypes">
+         <stringlist notr="true">
+          <string>vtkMRMLTableNode</string>
+         </stringlist>
+        </property>
+        <property name="showHidden">
+         <bool>false</bool>
+        </property>
+        <property name="showChildNodeTypes">
+         <bool>false</bool>
+        </property>
+        <property name="hideChildNodeTypes">
+         <stringlist notr="true"/>
+        </property>
+        <property name="noneEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="addEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="removeEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="editEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="renameEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="interactionNodeSingletonTag">
+         <string notr="true"/>
+        </property>
+       </widget>
+      </item>
+      <item row="27" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Covariates File :</string>
+        </property>
+       </widget>
+      </item>
+      <item row="27" column="1">
+       <widget class="qMRMLNodeComboBox" name="dataFrameSelector2">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="nodeTypes">
+         <stringlist notr="true">
+          <string>vtkMRMLTableNode</string>
+         </stringlist>
+        </property>
+        <property name="showHidden">
+         <bool>false</bool>
+        </property>
+        <property name="showChildNodeTypes">
+         <bool>false</bool>
+        </property>
+        <property name="hideChildNodeTypes">
+         <stringlist notr="true"/>
+        </property>
+        <property name="noneEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="addEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="removeEnabled">
+         <bool>false</bool>
+        </property>
+        <property name="interactionNodeSingletonTag">
+         <string notr="true"/>
+        </property>
+       </widget>
+      </item>
+      <item row="28" column="0">
+       <widget class="QLabel" name="referenceBatchLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Reference Batch :</string>
+        </property>
+       </widget>
+      </item>
+      <item row="28" column="1">
+       <widget class="QComboBox" name="referenceBatchComboBox">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <item>
+         <property name="text">
+          <string>None</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="29" column="0">
+       <layout class="QHBoxLayout" name="horizontalLayout_3"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QCheckBox" name="splitFileCheckBox">
+        <property name="text">
+         <string>Split File</string>
         </property>
        </widget>
       </item>
@@ -250,23 +392,56 @@
      </property>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
-       <widget class="Line" name="line_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Run ComBat Harmonization :</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="runComBatButton">
+        <property name="maximumSize">
+         <size>
+          <width>440</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Run</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>TextLabel</string>
+       <layout class="QHBoxLayout" name="horizontalLayout"/>
+      </item>
+      <item row="2" column="0" colspan="2">
+       <widget class="QLineEdit" name="statusLineEdit">
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="pushButton_2">
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>PushButton</string>
+         <string>Harmonization Results : </string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="showResultsButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Show Results</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QPushButton" name="saveResultsButton">
+        <property name="text">
+         <string>Save Results</string>
         </property>
        </widget>
       </item>
@@ -281,28 +456,25 @@
      <property name="collapsed">
       <bool>true</bool>
      </property>
-     <layout class="QFormLayout" name="formLayout_3">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Invert threshold: </string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QCheckBox" name="invertOutputCheckBox">
-        <property name="toolTip">
-         <string>If checked, values above threshold are set to 0. If unchecked, values below are set to 0.</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="invertThreshold" stdset="0">
-         <string/>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <widget class="QCheckBox" name="invertOutputCheckBox">
+      <property name="geometry">
+       <rect>
+        <x>7</x>
+        <y>28</y>
+        <width>492</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="toolTip">
+       <string>If checked, values above threshold are set to 0. If unchecked, values below are set to 0.</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="invertThreshold" stdset="0">
+       <string/>
+      </property>
+     </widget>
     </widget>
    </item>
    <item>
@@ -341,6 +513,11 @@
    <container>1</container>
   </customwidget>
   <customwidget>
+   <class>ctkPathLineEdit</class>
+   <extends>QWidget</extends>
+   <header>ctkPathLineEdit.h</header>
+  </customwidget>
+  <customwidget>
    <class>qMRMLNodeComboBox</class>
    <extends>QWidget</extends>
    <header>qMRMLNodeComboBox.h</header>
@@ -353,5 +530,38 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>S</sender>
+   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
+   <receiver>dataFrameSelector1</receiver>
+   <slot>setMRMLScene(vtkMRMLScene*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>285</x>
+     <y>293</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>376</x>
+     <y>278</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>S</sender>
+   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
+   <receiver>dataFrameSelector2</receiver>
+   <slot>setMRMLScene(vtkMRMLScene*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>285</x>
+     <y>293</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>376</x>
+     <y>305</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
