--- a/ComBatHarmonization/Resources/UI/ComBatHarmonization.ui
+++ b/ComBatHarmonization/Resources/UI/ComBatHarmonization.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>407</width>
-    <height>687</height>
+    <width>408</width>
+    <height>691</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -83,6 +83,12 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="toolTip">
+         <string>Click to create DataFrames in the DataFrames for Harmonization module.</string>
+        </property>
+        <property name="statusTip">
+         <string>Click to create DataFrames in the DataFrames for Harmonization module.</string>
+        </property>
         <property name="text">
          <string>DataFrame Creation Module</string>
         </property>
@@ -102,6 +108,12 @@
        <widget class="qMRMLNodeComboBox" name="dataFrameSelector1">
         <property name="enabled">
          <bool>true</bool>
+        </property>
+        <property name="toolTip">
+         <string>Select the desired features DataFrame to be harmonized.</string>
+        </property>
+        <property name="statusTip">
+         <string>Select the desired features DataFrame to be harmonized.</string>
         </property>
         <property name="nodeTypes">
          <stringlist notr="true">
@@ -134,6 +146,12 @@
         <property name="enabled">
          <bool>true</bool>
         </property>
+        <property name="toolTip">
+         <string>Select the corresponding covariates DataFrame.</string>
+        </property>
+        <property name="statusTip">
+         <string>Select the corresponding covariates DataFrame.</string>
+        </property>
         <property name="nodeTypes">
          <stringlist notr="true">
           <string>vtkMRMLTableNode</string>
@@ -165,6 +183,12 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="toolTip">
+         <string>Choose which is the 'batch' covariate,</string>
+        </property>
+        <property name="statusTip">
+         <string>Choose which is the 'batch' covariate,</string>
+        </property>
         <property name="placeholderText">
          <string/>
         </property>
@@ -189,6 +213,12 @@
        <widget class="QComboBox" name="referenceBatchComboBox">
         <property name="enabled">
          <bool>false</bool>
+        </property>
+        <property name="toolTip">
+         <string>Choose a reference batch (optional).</string>
+        </property>
+        <property name="statusTip">
+         <string>Choose a reference batch (optional).</string>
         </property>
         <item>
          <property name="text">
@@ -337,14 +367,20 @@
    </item>
    <item>
     <widget class="ctkCollapsibleButton" name="advancedCollapsibleButton">
+     <property name="toolTip">
+      <string>Expand to adjust advanced settings.</string>
+     </property>
+     <property name="statusTip">
+      <string>Expand to adjust advanced settings.</string>
+     </property>
      <property name="text">
       <string>Advanced</string>
      </property>
      <property name="checked">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <property name="collapsed">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
       <item row="3" column="0">
@@ -370,6 +406,12 @@
       </item>
       <item row="3" column="1">
        <widget class="QComboBox" name="ebComboBox">
+        <property name="toolTip">
+         <string>Choose if Empirical Bayes should be performed.</string>
+        </property>
+        <property name="statusTip">
+         <string>Choose if Empirical Bayes should be performed.</string>
+        </property>
         <item>
          <property name="text">
           <string>True (default)</string>
@@ -384,6 +426,12 @@
       </item>
       <item row="4" column="1">
        <widget class="QComboBox" name="parametricComboBox">
+        <property name="toolTip">
+         <string>Choose if parametric adjustments should be performed.</string>
+        </property>
+        <property name="statusTip">
+         <string>Choose if parametric adjustments should be performed.</string>
+        </property>
         <item>
          <property name="text">
           <string>True (default)</string>
@@ -398,6 +446,12 @@
       </item>
       <item row="5" column="1">
        <widget class="QComboBox" name="mean_onlyComboBox">
+        <property name="toolTip">
+         <string>Choose if you would like only the mean to be adjusted (no scaling).</string>
+        </property>
+        <property name="statusTip">
+         <string>Choose if you would like only the mean to be adjusted (no scaling).</string>
+        </property>
         <property name="currentIndex">
          <number>1</number>
         </property>
@@ -438,12 +492,24 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="toolTip">
+         <string>Change the list of categorical covariates.</string>
+        </property>
+        <property name="statusTip">
+         <string>Change the list of categorical covariates.</string>
+        </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QLineEdit" name="continuousColumnsLineEdit">
         <property name="enabled">
          <bool>false</bool>
+        </property>
+        <property name="toolTip">
+         <string>Change the list of continuous covariates.</string>
+        </property>
+        <property name="statusTip">
+         <string>Change the list of continuous covariates.</string>
         </property>
        </widget>
       </item>
@@ -456,6 +522,12 @@
       </item>
       <item row="0" column="1">
        <widget class="QCheckBox" name="assignColumnsCheckBox">
+        <property name="toolTip">
+         <string>Click if you desire to assign the categorical and continuous covariates differently.</string>
+        </property>
+        <property name="statusTip">
+         <string>Click if you desire to assign the categorical and continuous covariates differently.</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -470,10 +542,10 @@
       <bool>false</bool>
      </property>
      <property name="toolTip">
-      <string>Click to apply all inputs and create the DataFrames. If selected, DataFrames will be automatically saved on path input.</string>
+      <string>Click to apply all inputs and run ComBat. Output will be automatically saved in given path.</string>
      </property>
      <property name="statusTip">
-      <string>Click to apply all inputs and create the DataFrames. If selected, DataFrames will be automatically saved on path input.</string>
+      <string>Click to apply all inputs and run ComBat. Output will be automatically saved in given path.</string>
      </property>
      <property name="text">
       <string>Run ComBat</string>
@@ -489,10 +561,10 @@
    <item>
     <widget class="QCommandLinkButton" name="goToPlotResultsButton">
      <property name="toolTip">
-      <string>Click to go to the ComBatHarmonization module</string>
+      <string>Click to go to the Quantify Results module</string>
      </property>
      <property name="statusTip">
-      <string>Click to go to the ComBatHarmonization module</string>
+      <string>Click to go to the Quantify Results module</string>
      </property>
      <property name="text">
       <string>Quantify Results Module</string>
